# git-rusty

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  git_operations.rs  github_operations.rs  main.rs
