[package]
name = "git-rusty"
version = "0.1.0"
authors = ["RChapman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
structopt = {version = "0.3.22", default-features = false }
reqwest = { version = "0.11.4", features = ["blocking","json"] }
tokio = { version = "1.8.1", features = ["macros","rt-multi-thread"] }
#rpassword = "5.0.1"
