[package]
name = "git-rusty"
version = "0.1.0"
authors = ["RChapman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
structopt = {version = "0.3.26", default-features = false }
reqwest = { version = "0.12.7", features = ["blocking","json"] }
tokio = { version = "1.39.3", features = ["macros","rt-multi-thread"] }

[dev-dependencies]
openssl = "0.10.66"
